--- a/Trains.WP8/StationPage.xaml
+++ b/Trains.WP8/StationPage.xaml
@@ -171,7 +171,7 @@
                                FontSize="{StaticResource PhoneFontSizeSmall}" />
                 </Grid>
             </phone:PivotItem>
-            <phone:PivotItem Header="Arrivals">
+            <phone:PivotItem Header="Arrivals" x:Name="arrivalsPivotItem">
                 <Grid>
                     <ItemsControl x:Name="arrivals" 
                                   ItemsSource="{Binding Arrivals}"
